add apache module

--- a/enviornments/production/modules/apache/files/index.html
+++ b/enviornments/production/modules/apache/files/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Puppet Webserver</title>
+    <title>Puppet apache</title>
 </head>
 <body>
-    <h1>Willkommen auf meinem Puppet Webserver!</h1>
+    <h1>Willkommen auf meinem Puppet apache!</h1>
     <p>Diese Seite wurde mit Puppet automatisch erstellt.</p>
 </body>
 </html>
